--- a/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/priorityDate.xhtml
@@ -4,7 +4,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:i="http://www.example.com/jsf"
+      xmlns:i="http://www.periscope.com/jsf"
       xmlns:f="http://java.sun.com/jsf/core">
 
 
