--- a/periscope-web/src/main/webapp/pages/project/report/allReports/mainTechnologicalProfile.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/mainTechnologicalProfile.xhtml
@@ -18,11 +18,11 @@
 
             <h:form id="chart" styleClass="container">
 
-                <center><h4>Número de classificações</h4></center>
+                <center><h4>Número de classificações por depositante</h4></center>
 
                 <i:filtro controller="#{mainIPCController}" filter="8"/>
 
-                <h:panelGrid columns="4">
+                <h:panelGrid columns="4" style="margin-top: 20px">
 
                     <p:selectBooleanCheckbox id="klass" itemLabel="#{msgs['class']}"
                                              value="#{mainIPCController.klass}">
@@ -52,9 +52,19 @@
                         <p:ajax update="tudo"
                                 listener="#{mainIPCController.update()}" />
                     </p:selectBooleanCheckbox>
-
                 </h:panelGrid>
 
+                <br/>
+                <h:panelGrid columns="2"  style="margin-top: 20px;margin-bottom: 20px">
+                    <p:outputLabel value="#{msgs['applicants']}:"/>  
+                    <p:selectOneMenu id="cmbNature" value="#{mainIPCController.filtro.applicantName}">
+                        <f:selectItem itemLabel="#{msgs.none}" itemValue=""/>
+                        <f:selectItems value="#{applicantRepository.getApplicants(currentProject)}" var="t" itemValue="#{t.name}" itemLabel="#{t.name}" />	
+                        
+                        <p:ajax update="tudo,@this"
+                                listener="#{mainIPCController.update()}" />
+                    </p:selectOneMenu>
+                </h:panelGrid>
 
                 <h:panelGrid id="tudo" columns="2" styleClass="container">
 
