Regiões atualizadas e inserido harmonização

--- a/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/applicantHarmonization.xhtml
@@ -8,7 +8,7 @@
 
     <f:view contentType="text/html">
         <h:form id="formAll">
-            <p:accordionPanel>
+<!--            <p:accordionPanel>
                 <p:tab title="#{msgs.adjustmentLot}">
                     <h:panelGrid columns="2" cellpadding="10">  
                         <p:outputLabel value="#{msgs['juridicalNature']}:"/>  
@@ -24,7 +24,7 @@
                     </h:panelGrid> 
                     <p:button value="#{msgs.apply}"/>
                 </p:tab>
-            </p:accordionPanel>
+            </p:accordionPanel>-->
             <p:dataTable id="applicants" var="pa" style="font-size:12px"
                          emptyMessage="Não existem depositantes carregados"
                          value="#{applicantHarmonizationController.applicants}" paginator="true"
