--- a/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
@@ -27,7 +27,7 @@
                             title="#{msgs.natureDepositor}" />
 
                 <p:dataTable id="inventors"
-                             emptyMessage="Nenhum inventor cadastrado." var="pair"
+                             emptyMessage="Nenhuma natureza cadastrado." var="pair"
                              value="#{natureApplicantController.pairs}">
 
                     <p:column headerText="#{msgs.name}">
