--- a/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/dialogInventorRule.xhtml
@@ -12,6 +12,9 @@
 		<h:panelGrid columns="2">		
 			<h:outputLabel value="Nome harmonizado " style="font-weight:bold"/>				
                         <p:inputText value="#{inventorHarmonizationController.rule.name}"/>
+                        
+                        <h:outputLabel value="#{msgs['acronym']} " style="font-weight:bold" />				
+                        <p:inputText value="#{inventorHarmonizationController.rule.acronym}"/>
 						
 			<h:outputLabel value="País " style="font-weight:bold"/>				
                         <p:selectOneMenu value="#{inventorHarmonizationController.rule.country.acronym}" valueChangeListener="#{inventorHarmonizationController.selectListener}">
