Fix de mensagens

--- a/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/harmonization/ruleList.xhtml
@@ -43,7 +43,7 @@
                             #{rule.country == null ? '' : rule.country.name}					
                         </p:column>
                         <p:column>														
-                            #{rule.nature == null ? '' : rule.nature.name}					
+                            #{rule.nature == null ? '' : msgs[rule.nature.name]}					
                         </p:column>
                         <p:column>
                             <center>
