Atualização do numero da build e fix em algumas mensagens

--- a/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/natureApplicant.xhtml
@@ -30,7 +30,7 @@
                              emptyMessage="Nenhuma natureza cadastrado." var="pair"
                              value="#{natureApplicantController.pairs}">
 
-                    <p:column headerText="#{msgs.name}">
+                    <p:column headerText="#{msgs.nature}">
                         <h:outputText value="#{pair.key}" />
                     </p:column>
 
