--- a/periscope-web/src/main/webapp/pages/project/report/allReports/stateDistribuition.xhtml
+++ b/periscope-web/src/main/webapp/pages/project/report/allReports/stateDistribuition.xhtml
@@ -22,7 +22,7 @@
                                 orientation="horizontal" legendPosition="se" datatipFormat="%s"
                                 title="Número Patentes por Estado" />
                     <p:dataTable id="states"
-                                 emptyMessage="Nenhuma patente brasileira" var="pair"
+                                 emptyMessage="Nenhuma patente com estado brasileiro" var="pair"
                                  value="#{stateDistribuitionController.pairs}">
 
                         <p:column headerText="Estado">
